# Machine-Learning-Based-Anomaly-Detector

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  main.sh  pyproject.toml  pyrightconfig.json
mlruns/0/: meta.yaml
mlruns/893669967940680367/: meta.yaml
mlruns/893669967940680367/26e0b1690f474394b44947323807dab9/artifacts/: train_data.npy  train_dataframe_mlflow.json
mlruns/893669967940680367/a1dbb68533fc49b69ad2d3dda36751eb/: meta.yaml
mlruns/893669967940680367/a1dbb68533fc49b69ad2d3dda36751eb/artifacts/: val_data.npy
mlruns/893669967940680367/a1dbb68533fc49b69ad2d3dda36751eb/metrics/: anomaly_threshold  best_val_loss  train_loss  val_loss
mlruns/893669967940680367/a1dbb68533fc49b69ad2d3dda36751eb/metrics/system/: cpu_utilization_percentage  disk_available_megabytes  disk_usage_megabytes  disk_usage_percentage  network_receive_megabytes  network_transmit_megabytes  system_memory_usage_megabytes  system_memory_usage_percentage
mlruns/893669967940680367/a1dbb68533fc49b69ad2d3dda36751eb/tags/: mlflow.runName
mlruns/893669967940680367/d198ba4a82584eb8bfda0ee8058467ad/: meta.yaml
mlruns/893669967940680367/d198ba4a82584eb8bfda0ee8058467ad/metrics/: anomaly_rate  inference_duration_seconds  num_anomalies_detected  num_windows_processed  service_error_mobile-bff  service_error_transfer-service  service_error_transfer-validation-service
mlruns/893669967940680367/d198ba4a82584eb8bfda0ee8058467ad/params/: inference_start_time
mlruns/893669967940680367/d198ba4a82584eb8bfda0ee8058467ad/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
output/transfer/: inference_dataset.json  service_names.txt  splunk_results_inference.json  splunk_results_training.json  train_data.npy  train_dataframe_mlflow.json  training_dataset.json  val_data.npy
output/transfer/prometheus_data_inference/mobile_bff/: cpu-mobile_bff.json  latency-mobile_bff.json  memory-mobile_bff.json
output/transfer/prometheus_data_inference/transfer_service/: cpu-transfer_service.json  latency-transfer_service.json  memory-transfer_service.json
output/transfer/prometheus_data_inference/transfer_validation_service/: cpu-transfer_validation_service.json  latency-transfer_validation_service.json  memory-transfer_validation_service.json
output/transfer/prometheus_data_training/mobile_bff/: cpu-mobile_bff.json  latency-mobile_bff.json  memory-mobile_bff.json
output/transfer/prometheus_data_training/transfer_service/: cpu-transfer_service.json  latency-transfer_service.json  memory-transfer_service.json
output/transfer/prometheus_data_training/transfer_validation_service/: cpu-transfer_validation_service.json  latency-transfer_validation_service.json  memory-transfer_validation_service.json
scripts/: synthetic_benchmark.py
src/ml_monitoring_service/: anomaly_analyser.py  anomaly_detector.py  architecture_diagrams.py  circuit_breaker.py  configuration.py  constants.py  data_handling.py  data_validation.py  main.py  memory_management.py  model.py  model_building.py  openapi.json  utils.py  visualisation.py
src/ml_monitoring_service/data_gathering/: combine.py  get_prometheus_data.py  get_splunk_data.py
src/ml_monitoring_service/evaluation/: __init__.py  synthetic.py
src/ml_monitoring_service/resources/: service_sets.yaml
tests/: test_anomaly_detector.py  test_circuit_breaker.py  test_configuration.py  test_data_handling.py  test_data_validation.py  test_main.py  test_memory_management.py  test_model.py  test_model_architecture.py
tests/api/: test_app.py
tests/data_gathering/: test_get_prometheus_data.py  test_get_splunk_data.py  test_splunk_help_methods.py
tests/integration/: test_end_to_end.py
tests/resources/: combined_dataset_test.json  combined_dataset_test_partial_data.json  combined_dataset_test_transfer.json
