[tool.poetry]
name = "ml-based-anomaly-detector"
version = "0.1.0"
description = ""
authors = ["Thomas Selin"]
readme = "README.md"
packages = [
  {include = "ml_monitoring_service", from = "src"},
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Core dependencies with exact versions pinned for production reproducibility
python-dotenv = "1.1.1"
numpy = "1.26.4"
pandas = "2.2.3"
requests = "2.32.3"
urllib3 = "2.2.3"
torch = "2.5.1"
networkx = "3.4.2"
matplotlib = "3.10.7"
apscheduler = "3.11.0"
flask = "3.1.2"
pytz = "2024.2"
pyyaml = "6.0.2"
mlflow = "3.8.1"
waitress = "3.0.2"
psutil = "6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-cov = "4.1.0"
pytest-flask = "1.3.0"
pytest-env = "1.1.5"
pre-commit = "4.0.1"
ruff = "0.9.2"
mypy = "1.14.1"
pyright = "1.1.407"
bandit = "1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-branch --cov-report=term-missing -m 'not integration' tests"
env = [
  "MLFLOW_EXPERIMENT_NAME=ML Based Anomaly Detector: Unit/pytest runs",
  "MLFLOW_TRACKING_URI=sqlite:///./mlflow.db",
]
markers = [
  "integration: slower integration tests (skipped by default)",
]

[tool.ruff]
target-version = "py312"
line-length = 88

extend-exclude = [
  "mlruns",
  "output",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
no_implicit_optional = false
ignore_missing_imports = true
exclude = "^(mlruns|output)/"

[tool.bandit]
exclude_dirs = ["tests", "mlruns", "output"]
skips = ["B101", "B104", "B614"]  # Skip assert_used, hardcoded_bind_all_interfaces, and pytorch_load_save checks
